--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,21 +1,47 @@
 # German strings go here for Rails i18n
 de:
+  admin_menu_browsers_restricitons: "Browsereinschränkungen"
   admin_menu_under_construction: "Im Bau"
-  plugin_test_under_construction: "Im Bau"
-  label_tech_period: "Technische Wartungsarbeiten"
+
+  button_add_rule: "Regel hinzufügen"  
+
+  error_cant_store_rule_without_version_if_condition: "Die Regel kann nicht gespeichert werden, wenn keine Version ausgewählt wurde obwohl eine Bedingung vorhanden ist."
+
+  field_browser: "Browser"
+  field_browser_version: "Browser Version"
+  field_condition: "Bedingung"
   field_custom_message: "Nachricht"
   field_tech_begin_date: "Start der Wartungsarbeiten"
   field_tech_end_date: "Ende der Wartungsarbeiten"
   field_turned_on: "Technische Wartungsarbeiten aktivieren"
-  field_notify_about: "Benachrichtigung versenden"
   field_message_head: "Nachrichten Überschrift"
+  field_notify_about: "Benachrichtigung versenden"
+  field_responsible: "Verantwortlich"
 
-  notice_tech_period_saved: "Zeitfenster für Technische Wartungsarbeiten gespeichert"
-  warning_technical_operations_in_progress: "Achtung, technische Wartungsarbeiten werden durchgeführt!"
-
-  label_dear_colleagues: "Liebe Kollegen!"
+  infromation_technical_operations_emergency: "Der Redmine Server ist unter Wartung bis %{time_end}."
+  infromation_technical_operations_emergency_html: "Der Redmine Server ist unter Wartung bis <strong><nobr>%{time_end}</nobr></strong>"
   infromation_technical_operations_planing: "Der Redmine Server wird für die Zeit vom %{time_start} bis %{time_end} gewartet! Bitte schließen Sie Ihre Aktivitäten bis zu diesem Zeitfenster ab."
   infromation_technical_operations_ends: "Technische Wartungsarbeiten wurden abgeschlossen. Redmine arbeitet normal."
-  infromation_technical_operations_emergency: "Der Redmine Server ist unter Wartung bis %{time_end}."
 
-  infromation_technical_operations_emergency_html: "Der Redmine Server ist unter Wartung bis <strong><nobr>%{time_end}</nobr></strong>"
+  label_any_version: "Irgendeine Version"
+  label_ask_for: "Ansprechpartner:"
+  label_browsers_conditions: "Redmine abschalten für die nächsten Brwoser"
+  label_dear_colleagues: "Liebe Kollegen!"
+  label_in_case_of_questions_call_for: "In case of questions call for"
+  label_inform_responsible: "Bitte melden Sie sich bei einem Verantwortlichen Benutzer."
+  label_login_to_rm: "Login"
+  label_not_specified: "Nicht spezifiziert"
+  label_preview: "Preview"
+  label_rmplus_logo: "Dieses Plugin wurde entwickelt von \"RM+\" Team. Sie finden alle Plugins auf"
+  label_tech_period: "Technische Wartungsarbeiten"
+  
+  notice_tech_period_saved: "Zeitfenster für Technische Wartungsarbeiten gespeichert"
+  
+  plugin_test_under_construction: "Im Bau"
+
+  settings_enable_restrictions: "Browsereinschränkungen aktivieren"  
+  settings_responsible_users: "Verantwortlich"
+  settings_text_message: "Browser Warnmeldung"
+      
+  warning_technical_operations_in_progress: "Achtung, technische Wartungsarbeiten werden durchgeführt!"
+  warning_unsupported_browser_version: "Sie verwenden einen nicht unterstützte Browser Version"
